unpackaged/main/default/objects/bt_stripe__Coupon2__c/bt_stripe__Coupon2__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. Coupons can be applied to an Invoice.</description>
    <label>Stripe Coupon</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>