unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Amount_Off__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_Off__c</fullName>
    <description>Amount that will be taken off the subtotal of any invoices for this customer.</description>
    <inlineHelpText>Amount that will be taken off the subtotal of any invoices for this customer.</inlineHelpText>
    <label>Amount Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>