unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Coupon_Id__c</fullName>
    <label>Coupon Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>