unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Deleted_From_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Deleted_From_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted From Stripe</label>
    <type>Checkbox</type>
</CustomField>