unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Duration__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Duration__c</fullName>
    <description>Describes how long a customer who applies this coupon will get the discount.</description>
    <inlineHelpText>Describes how long a customer who applies this coupon will get the discount.</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forever</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Repeating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>