unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Message__c</fullName>
    <inlineHelpText>Coupon error message. This field auto-populates if there is an error when the coupon is pushed to stripe.</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>