unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Max_Redemptions__c</fullName>
    <description>Maximum number of times this coupon can be redeemed, in total, across all customers, before it is no longer valid.</description>
    <inlineHelpText>Maximum number of times this coupon can be redeemed, in total, across all customers, before it is no longer valid.</inlineHelpText>
    <label>Max Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>