unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Percent_Off__c</fullName>
    <description>Percent that will be taken off the subtotal of any invoices for this customer for the duration of the coupon.</description>
    <inlineHelpText>Percent that will be taken off the subtotal of any invoices for this customer for the duration of the coupon.</inlineHelpText>
    <label>Percent Off</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>