unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Redeem_By__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Redeem_By__c</fullName>
    <description>Date after which the coupon can no longer be redeemed.</description>
    <inlineHelpText>Date after which the coupon can no longer be redeemed.</inlineHelpText>
    <label>Redeem By</label>
    <type>DateTime</type>
</CustomField>