unpackaged/main/default/objects/bt_stripe__Coupon2__c/fields/bt_stripe__Times_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Times_Redeemed__c</fullName>
    <description>Number of times this coupon has been applied to a customer.</description>
    <inlineHelpText>Number of times this coupon has been applied to a customer.</inlineHelpText>
    <label>Times Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>